[gd_scene load_steps=3 format=3 uid="uid://cdgn7frptj7kj"]

[ext_resource type="Theme" uid="uid://bhkvjdraqkwk6" path="res://text_button_theme.tres" id="1_dvnkq"]
[ext_resource type="Script" uid="uid://cvm4hyviaabxf" path="res://Scripts/confirm_delete_popup.gd" id="1_h8guk"]

[node name="ConfirmDeletePopup" type="MarginContainer"]
process_mode = 3
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -103.0
offset_right = 10.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 130
theme_override_constants/margin_right = 130
script = ExtResource("1_h8guk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="Content" type="VBoxContainer" parent="PanelContainer/ContentMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/ContentMargin/Content"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Option is being used in decisions--delete anyway and remove from decisions?"
autowrap_mode = 3

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/ContentMargin/Content"]
layout_mode = 2
theme = ExtResource("1_dvnkq")

[node name="NoButton" type="Button" parent="PanelContainer/ContentMargin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_colors/font_hover_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
text = "No!"

[node name="YesButton" type="Button" parent="PanelContainer/ContentMargin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Yes"

[connection signal="pressed" from="PanelContainer/ContentMargin/Content/Buttons/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="PanelContainer/ContentMargin/Content/Buttons/YesButton" to="." method="_on_yes_button_pressed"]
